frontend/test/should_pass/defYield_003.grg
using defYield;

rule t
{
	pp:p(--- yield x);
---
	def x:A;
	
	modify {
		pp(--- yield y);
	---
		def y:A;
	}
}

pattern p(--- def x:B) modify(--- def z:B)
{
	y:B;
---
	yield { yield x = y; }
	
	modify {
		u:B;
	---
		eval { yield z = u; }
	}
}

