frontend/test/should_fail/exectype_AssignConstToVar3.grg
using exectype;

rule r
{
	modify  {
		exec(x:foo=A::Bar); // A is not an enum type
	}
}